- ajout d'un mode de calcul de la masse des poissons présents dans un bassin par échantillonnage
- ajout d'une fonction d'importation des mesures des poissons à partir d'un fichier CSV
- en consultation d'un poisson, affichage d'un graphique permettant de visualiser l'évolution de sa croissance

Version 1.8 du 18 février 2018
-------------------------------
Nouveautés :
- ajout de la gestion des sites : il est maintenant possible de gérer un élevage réparti sur plusieurs sites
- ajout d'un module d'importation des relevés de sonde d'analyse d'eau
- génération d'un graphique permettant de visualiser les paramètres physico-chimiques d'un ou plusieurs circuits d'eau

Version 1.7 du 13 décembre 2017
-------------------------------
Ajout d'un module permettant d'exécuter des requêtes directement dans la base de données

Version 1.6.12 du 1er aout 2017
-------------------------------
Modifications substancielles dans la gestion du sperme :
- la saisie des prélèvements n'est plus possible depuis une séquence, il faut la faire depuis la fiche détail d'un poisson en repro
- il est possible d'indiquer le conservateur utilisé
- lors de la congélation, il est possible maintenant d'indiquer plusieurs emplacements de stockage des paillettes
- pour suivre l'étape de congélation, il est possible de saisir des relevés de température, et le programme affiche la courbe correspondante
- lors de l'utilisation de paillettes (soit pour la repro, soit pour l'analyse), le nombre total de paillettes utilisées est calculé et mis à jour
- il est maintenant possible de saisir plusieurs mesures différentes, soit à partir de paillettes congelées, soit à partir du prélèvement initial.

Version 1.6.11 du 30 juin 2017
-------------------------------
Ajout de la détermination de la parenté d'un poisson
Corrections de bugs :
- il n'était pas possible de supprimer un croisement
- il n'était pas possible de rajouter des adultes à un croisement

Version 1.6.10 du 23 mai 2017