@@ -1,0 +1,11 @@
+<?php
+$_SESSION["FORMATDATE"]="us";
+$_SESSION["MASKDATELONG"] = "m/d/Y H:i:s";
+$_SESSION["MASKDATE"] = "m/d/Y";
+$_SESSION["MASKDATEEXPORT"] = 'Y-m-d';
+
+$LANG= array("locale"=>"en");
+$LANG["date"]["locale"] = "us";
+$LANG["date"]["formatdate"] = "MM/DD/YYYY";
+$LANG["date"]["formatdatetime"] = "MM/DD/YYYY HH:mm:ss";
+$LANG["date"]["formatdatecourt"] = "mm/dd/yy";
